# sample-cpp-plugin

./: .gitignore  CMakeLists.txt  Doxyfile.txt  Makefile  PluginA.cpp  README.org  factory.hpp  interfaces.hpp  loader.hpp  main.cpp
psdk/: factory.hpp  interfaces.hpp  loader.hpp
